- Styling: fixed select group name color for dark mode for v2.

--- a/RockWeb/Styles/styles-v2/core.css
+++ b/RockWeb/Styles/styles-v2/core.css
@@ -17075,7 +17075,7 @@ iframe.file-browser {
 }
 
 .ant-select-item-group {
-  color: rgba(0, 0, 0, 0.45);
+  color: var(--color-interface-medium);
   font-size: var(--font-size-xsmall);
   cursor: default;
 }
